# til-ai-26-nobrainnohack-AE-NLP

./: .gitignore
ae/: .dockerignore  Dockerfile  SOLUTION.md  SUBMIT.md  play.py  probe_sweep.sh  pyproject.toml  queue_full.sh  requirements.txt
ae/src/: ae_manager.py  ae_server.py  arena_map.json  features.py  forage_loops.json  hybrid_controller.py  killboxes.json  policy.py  respawn_map.json
ae/src/scripted/: adaptive_layers.py  belief.py  blast.py  danger.py  decide.py  escape.py  gates.py  geometry.py  greedy.py  handover.py  (+5 more)
ae/tests/: conftest.py  sample_request.json  test_actor_runtime.py  test_actor_state_dependent.py  test_adaptive_layers.py  test_ae_manager.py  test_ae_manager_neural.py  test_bc_dataset.py  test_bc_train.py  test_body_block.py  test_collect_family_winner.py  test_collect_hybrid_rollout.py  test_critic.py  test_e2e_selfplay.py  test_e2e_viz.py  test_enemy_avoid.py  test_eval_randomization.py  test_evaluate.py  test_feature_bases.py  test_feature_builder.py  test_feature_contract.py  test_feature_grid.py  test_feature_scalar.py  test_features_default_teacher.py  test_features_framestack.py  test_forage_loops.py  test_forced_escape_floor.py  test_forced_escape_planner.py  test_framestack_constants.py  test_greedy.py  test_grid_eval_parallel.py  test_handover_trigger.py  test_hybrid_buffer.py  test_hybrid_controller.py  test_hybrid_eval.py  test_hybrid_manager.py  test_hybrid_ppo_config.py  test_hybrid_ppo_math.py  test_hybrid_ppo_update.py  test_hybrid_rl_invariants.py  (+60 more)
ae/tools/: build_forage_loops.py  build_killboxes.py  dump_map.py
(+59 files in other folders)
